--- a/style.css
+++ b/style.css
@@ -22,23 +22,27 @@ p
 header
 {
 	position: relative;
-	top: 0;
 	width: 100%;
+	/*top: 0;
 	left: 0;
-	z-index: 2;
-	background-color: white;
+	z-index: 2;*/
 }
 
 header .container
 {
 	display: flex;
-	background-color: #6d1bd9;
+	background-color: #d91b1b;
 	justify-content: space-between;
 	align-items: center;
 	font-size: 15px;
 	font-weight: bolder;
 	width: 100%;
 	height: 77px;
+}
+
+header div .container
+{
+	width: 799px;
 }
 
 header .container .logo
@@ -50,7 +54,7 @@ header .container .logo
 
 header .container nav a
 {
-	color: white;
+	color: rgb(255, 255, 255);
 	text-decoration: none;
 	margin: 0 15px 0 15px;
 }
@@ -67,8 +71,29 @@ header .container .hamb
 
 footer.seccion
 {
-	background-color: #f8e9eb;
-	color: black;
+	background-color: #ff0022;
+	color: rgb(255, 255, 255);
 	padding-bottom: 0;
 	padding-top: 15px;
+}
+
+footer .barra-footer
+{
+	background-color: #ff0419;
+	text-align: center;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+footer p
+{
+	color: rgb(255, 255, 255);
+	margin-bottom: 30px;
+}
+
+footer a
+{
+	color: rgb(255, 255, 255);
 }
