--- a/style.css
+++ b/style.css
@@ -65,6 +65,79 @@ header .container nav a:hover
 	color: black;
 }
 
+.boton.boton-gris
+{
+	color: #ffffff;
+	background-color: #410a14;
+	font-size: 16px;
+	font-weight: bold;
+	padding: 4px 4px 4px 4px;
+}
+
+.boton.boton-gris:hover
+{
+	background: #6d625c;
+	color: #bbb8b5;
+	cursor: pointer;
+}
+
+.cuadrado-perfecto img
+{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	top: 0;
+	left: 0;
+	object-position: center;
+	position: absolute;
+}
+
+#galeria .cuadrado-perfecto img
+{
+	border: 2px solid #d91b54;
+}
+
+.container
+{
+	width: 1140px;
+	margin: 0 auto 0 auto;
+	padding-right: 15px;
+	padding-left: 15px;
+	position: relative;
+}
+
+.container-fluid
+{
+	width: 100%;
+	padding-right: 15px;
+	padding-left: 15px;
+	padding-bottom: 15px;
+	position: relative;
+}
+
+
+#inicio
+{
+	position: relative;
+	background-color: #f8e9eb;
+	padding-top: 2px;
+	padding-bottom: 8px;
+}
+
+#inicio img
+{
+	width: 100%;
+	display: block;
+}
+
+.cuadrado-perfecto
+{
+	width: 100%;
+	padding-bottom: 100%;
+	position: relative;
+}
+
+
 header .container .hamb
 	{
 		display: none;	
@@ -170,6 +243,41 @@ footer
 {
 	text-align: center;
 }
+
+
+#servicios .bloque-servicio
+{
+	border: 1px solid #410a14;
+}
+
+#servicios .bloque-servicio .bloque-img-servicio
+{
+	height: 100%;
+}
+
+#servicios .bloque-servicio .bloque-img-servicio img
+{
+	width: 100%;
+	height: 100%;
+}
+
+#servicios .bloque-servicio .bloque-img-servicio.cuadrado-perfecto
+{
+	padding-bottom: 56.25%;
+}
+
+#servicios .bloque-servicio .bloque-contenido-servicio
+{
+	padding: 15px;
+}
+
+#servicios .bloque-servicio .bloque-contenido-servicio h3
+{
+	margin-top: 0;
+	font-size: 25px;
+}
+
+
 
 @media(max-width: 767px)
 {
