--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header .contenedor
 	font-size: 15px;
 	font-weight: bolder;
 	width: 100%;
-	height: 80px;
+	height: 92px;
 }
 
 header div .contenedor
@@ -48,8 +48,8 @@ header div .contenedor
 
 header .contenedor .logo
 {
-	width: 100px;
-	height: 84px;
+	width: 155px;
+	height: 95px;
 	object-position: center;
 }
 
@@ -139,7 +139,7 @@ header .contenedor nav a:hover
 }
 
 
-header .container .hamb
+header .contenedor .hamb
 	{
 		display: none;	
 	}
@@ -159,7 +159,7 @@ footer.seccion
 	background-color: #ed0b0e;
 	color: #ffffff;
 	padding-bottom: 0;
-	padding-top: 15px;
+	padding-top: 0px;
 }
 
 footer .barra-footer
@@ -168,8 +168,8 @@ footer .barra-footer
 	text-align: center;
 	padding-left: 15px;
 	padding-right: 15px;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 10px;
+	padding-bottom: 1px;
 }
 
 footer .barra-footer p
